--- a/res/layout/view_play_dialog.xml
+++ b/res/layout/view_play_dialog.xml
@@ -4,49 +4,77 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <ImageView
-        android:id="@+id/iv_play_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:src="@drawable/media_play" />
-
-    <ProgressBar
-        android:id="@+id/pb_waiting"
-        style="?android:attr/progressBarStyleLarge"
-        android:layout_gravity="center"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_gravity="center"
         android:gravity="center"
         android:orientation="horizontal" >
 
-        <Button
+        <ImageView
+            android:id="@+id/iv_play_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/media_palyer_icon" />
+
+        <ProgressBar
+            android:id="@+id/pb_waiting"
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
+    <SeekBar
+        android:id="@+id/sb_progress"
+        android:layout_margin="10dp"
+        android:layout_gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/tv_progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:text="0/0"
+        android:visibility="invisible" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:background="@drawable/media_control_bar_bg"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:orientation="horizontal" >
+
+        <ImageButton
             android:id="@+id/btn_previous"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="后退" />
+            android:background="@drawable/media_left_button_selector"
+            android:src="@drawable/media_previous_icon" />
 
-        <Button
-            android:id="@+id/btn_play_and_pause"
+        <ImageButton
+            android:id="@+id/btn_play"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="播放" />
+            android:background="@drawable/media_middle_button_selector"
+            android:src="@drawable/media_paly_icon" />
 
-        <Button
-            android:id="@+id/btn_stop"
+        <ImageButton
+            android:id="@+id/btn_pause"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="停止" />
+            android:background="@drawable/media_middle_button_selector"
+            android:src="@drawable/media_pause_icon" />
 
-        <Button
+        <ImageButton
             android:id="@+id/btn_next"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="前进" />
+            android:background="@drawable/media_right_button_selector"
+            android:src="@drawable/media_next_icon" />
     </LinearLayout>
 
 </LinearLayout>
